--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ docs/deployment/SERVER-REALITY-AUDIT.md
 # docs/sdd.md
 # docs/sprint.md
 # docs/deployment/
+
+# bv (beads viewer) local config and caches
+.bv/
